# tauri-macos-menubar-app-example

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  bacon.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  fns.rs  main.rs  popover.rs  tray.rs
