[package]
name = "tauri-macos-menubar-app-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["Victor Aremu <me@victorare.mu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [
  "system-tray",
  "macos-private-api",
  "shell-open",
] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "main" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
